Use 1 thread per cpu core; show diff from std lib's PI

--- a/madhava-gather/Cargo.toml
+++ b/madhava-gather/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 clap = { git = "https://github.com/clap-rs/clap/" }
 num-format = { version = "0.4", features = ["with-system-locale"] }
+num_cpus = "1"
